# hielements

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  USAGE.md  hielements.hie
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
agent-changelog/: comprehensive-language-review.md  connection-point-typing.md  documentation-alignment-wasm-sharing.md  documentation-extraction-docstrings.md  element-templates.md  github-actions-cicd.md  hierarchical-checks-refactoring.md  hierarchical-checks.md  keyword-update-pattern-ref.md  language-explicit-declaration-connection-checks.md  language-v2-upgrade.md  named-component-syntax.md  pattern-library-generation.md  python-library-implementation.md  python-library-summary.md  readme-revert-and-update.md  readme-v2-prescriptive-descriptive-update.md  rename-templates-to-patterns-and-catalog.md  template-connection-points-and-requirements.md  templates-only-keywords.md  top-down-transitivity.md  user-defined-checks-extensibility.md  wasm-extensibility.md  wasm-library-sandboxing.md  wasm-library-support.md  wasm-sandbox-extensibility.md
crates/hielements-cli/: Cargo.toml
crates/hielements-cli/src/: main.rs
crates/hielements-core/: Cargo.toml
crates/hielements-core/src/: ast.rs  diagnostics.rs  doc.rs  interpreter.rs  lexer.rs  lib.rs  parser.rs  span.rs
crates/hielements-core/src/stdlib/: external.rs  files.rs  mod.rs  python.rs  rust.rs  wasm.rs
doc/: external_libraries.md  language_reference.md  language_v2.md  library_catalog.json  library_catalog.md  patterns_catalog.md  related_work.md  scope_management.md  summary.md  technical_architecture.md  todo.md  wasm_plugins.md
examples/: WASM_PLUGINS.md  advanced_templates.hie  hielements.toml  hielements_hybrid.toml  hierarchical.hie  hybrid_plugins.hie  language_example.hie  microservices.hie  minimal.hie  pattern_usage.hie  plugin_example.hie  python_example.hie  simple.hie  template_compiler.hie  template_microservice.hie  transitivity.hie  typed_connection_points.hie  v2_syntax_example.hie  v3_syntax_example.hie  wasm_example.hie
examples/plugins/: sample_plugin.py
examples/plugins/wasm-sample/: Cargo.toml  README.md
examples/plugins/wasm-sample/src/: lib.rs
patterns/: README.md
patterns/behavioral/: event_driven.hie
patterns/compiler/: compiler_pipeline.hie
patterns/cross-cutting/: observability.hie
patterns/structural/: hexagonal.hie  layered_architecture.hie  microservice.hie
scripts/: generate_pattern_catalog.py
specs/: cicd.hie  cli.hie  core.hie  documentation.hie  examples.hie  stdlib.hie  vscode.hie
vscode-extension/: README.md  language-configuration.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: hielements.tmLanguage.json
