[package]
name = "hielements-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line interface for Hielements"

[[bin]]
name = "hielements"
path = "src/main.rs"

[dependencies]
hielements-core = { path = "../hielements-core" }
clap.workspace = true
colored.workspace = true
miette = { workspace = true, features = ["fancy"] }
serde_json.workspace = true
