[package]
name = "hielements-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core interpreter library for Hielements"

[dependencies]
thiserror.workspace = true
miette.workspace = true
logos.workspace = true
serde.workspace = true
serde_json.workspace = true
glob.workspace = true
walkdir.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile = "3.24"
