[package]
name = "hielements-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core interpreter library for Hielements"

[dependencies]
thiserror.workspace = true
miette.workspace = true
logos.workspace = true
serde.workspace = true
serde_json.workspace = true
glob.workspace = true
walkdir.workspace = true
regex = "1.10"
toml = "0.8"
wasmtime = "28.0"

[dev-dependencies]
insta.workspace = true
tempfile = "3.24"
