[package]
name = "hielements-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core interpreter library for Hielements"

[dependencies]
thiserror.workspace = true
miette.workspace = true
logos.workspace = true
serde.workspace = true
serde_json.workspace = true
glob.workspace = true
walkdir.workspace = true
regex = "1.10"
toml = "0.9"
# WASM runtime for sandboxed plugin execution (optional feature for future)
# wasmtime = { version = "27.0", optional = true }
# wasmtime-wasi = { version = "27.0", optional = true }

[features]
default = []
# wasm = ["dep:wasmtime", "dep:wasmtime-wasi"]

[dev-dependencies]
insta.workspace = true
tempfile = "3.24"
